# ultimate_rust2

./: Cargo.toml
exercise/closures_iterators/src/: main.rs
exercise/docs/src/: lib.rs
exercise/errors/src/: lib.rs  main.rs
exercise/idiomatic/src/: main.rs
exercise/logging/src/: lib.rs  main.rs
exercise/testing/: Cargo.toml
exercise/testing/benches/: my_benchmark.rs
exercise/testing/src/: lib.rs
exercise/testing/tests/: more_tests.rs
exercise/threads_channels/src/: main.rs
exercise/traits/src/: main.rs
game_project/: Cargo.toml
game_project/src/: main.rs
road_race/: Cargo.toml
road_race/src/: main.rs
