[package]
name = "game_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rusty_engine = "6.0.0"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks =  false
incremental = false 
codegen-units = 16
